Sample template created

--- a/Sample 1/index.html
+++ b/Sample 1/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Contact Us</h1>
+    </header>
+    <article>
+        <section>
+            <h2>Feel free to message us and let us know your thoughts</h2>
+            <p>Any Questions or Doubts? Contact us or Email us</p>
+            <div class="email-id"><img src="email_icon.png" width="30"><h5>rohini@gmail.com</h5></div>
+            <h4>follow me</h4>
+            <div class="social-media">
+                <img src="twitterx-icon.png" alt="twitter X icon">
+                <img src="instagram-icon.png" alt="instagram icon">
+                <img src="linkedin-icon.png" alt="linkedin icon">
+                <img src="youtube-icon.png" alt="youtube icon">
+                <img src="facebook-icon.png" alt="facebook icon">
+            </div>
+        </section>
+        <form>
+            <input type="text" placeholder="Full Name here">
+            <input type="email" placeholder="Email Address">
+            <input type="tel" placeholder="Phone">
+            <textarea placeholder="write message"></textarea>
+            <button class="btn">Submit</button>
+        </form>
+    </article>
+    <footer>Copyright &copy; 2024 Rohini. All rights reserved.</footer>
 </body>
 </html>
