--- a/Sample 1/index.html
+++ b/Sample 1/index.html
@@ -14,14 +14,14 @@
         <section>
             <h2>Feel free to message us and let us know your thoughts</h2>
             <p>Any Questions or Doubts? Contact us or Email us</p>
-            <div class="email-id"><img src="email_icon.png" width="30"><h5>rohini@gmail.com</h5></div>
+            <div class="email-id"><img src="images/email_icon.png" width="30"><h5>rohini@gmail.com</h5></div>
             <h4>follow me</h4>
             <div class="social-media">
-                <img src="twitterx-icon.png" alt="twitter X icon">
-                <img src="instagram-icon.png" alt="instagram icon">
-                <img src="linkedin-icon.png" alt="linkedin icon">
-                <img src="youtube-icon.png" alt="youtube icon">
-                <img src="facebook-icon.png" alt="facebook icon">
+                <img src="images/twitterx-icon.png" alt="twitter X icon">
+                <img src="images/instagram-icon.png" alt="instagram icon">
+                <img src="images/linkedin-icon.png" alt="linkedin icon">
+                <img src="images/youtube-icon.png" alt="youtube icon">
+                <img src="images/facebook-icon.png" alt="facebook icon">
             </div>
         </section>
         <form>
