Sample page 2 styled

--- a/Sample 2/index.html
+++ b/Sample 2/index.html
@@ -15,10 +15,12 @@
         Magnam.
     </p>
     <form>
-        <input type="text" placeholder="Full name">
-        <input type="email" name="email" id="email" placeholder="Email Address">
+        <div>
+            <input type="text" placeholder="Full name">
+            <input type="email" name="email" id="email" placeholder="Email Address">
+        </div>
         <textarea placeholder="Messages"></textarea>
-        <input type="button" value="Submit">
+        <input type="button" value="Submit" class="btn">
     </form>
 </body>
 
